tests/scan/fixtures/validation/negative/clean_cargo_clean_cache_crate/src/lib.rs
//! A clean Rust crate: clean_cache_crate.

pub fn hello() -> &'static str { "hello" }
